fix: fixed general html tag

--- a/index.html
+++ b/index.html
@@ -7,8 +7,34 @@
     <title>Shelter NovemberMan90</title>
 </head>
 <body>
-    <header>
-        
+    <!--header-->
+
+    <header class="header-box">
+        <div class="head-container">
+            <div class="logo">
+                    <!--logo-->
+            </div>
+
+            <div class="nav-bar" >
+                <!--nav bar-->
+            </div>
+
+        </div>
+
     </header>
+
+                <!--main-->
+    <main>
+
+
+    </main>
+
+    <!--footer-->
+
+    <footer>
+
+    </footer>
+
+
 </body>
 </html>
