add; added nav bar item

--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
     <!--header-->
 
     <header class="header-box">
-        <div class="head-container">
-            <div class="logo">
-                    <!--logo-->
-            </div>
+        <div class="nav-container">
+            
+                <a href="#">Cozy House</a>
+        
+                <nav class="navbar">
+                    <ul class="navbar-list">
+                        <il class="nav-item">
+                            <a href="#" class="nav-link active">About the shelter</a>
+                        </il>
+                        <il class="nav-item" >
+                            <a href="#" class="nav-link">Our pets</a>
+                        </il>
+                        <il class="nav-item">
+                            <a href="#" class="nav-link">Help the shelter</a>
+                        </il>
+                        <il class="nav-item">
+                            <a href="#" class="nav-link">Contacts</a>
+                        </il>
 
-            <div class="nav-bar" >
-                <!--nav bar-->
-            </div>
+                    </ul>
+
+                </nav>
 
         </div>
 
