add: added contet in maine area

--- a/index.html
+++ b/index.html
@@ -38,7 +38,29 @@
     </header>
 
                 <!--main-->
-    <main>
+    <main class="maine-box">
+        <div class="maine-container">
+            <div class="maine-right-bar">
+                <h2>Not only people need a house</h2>
+                <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. 
+                    He or she will love you more than anybody else in the world, you will see!</p>
+
+                    <form>
+                        <button>
+                             <a href="#">Make a friend</a>
+                        </button>
+                    </form>
+            </div>
+
+                <div class="maine-left-bar">
+                    <img src="" alt="puppy">
+
+                </div>
+
+
+            
+
+        </div>
 
 
     </main>
