add: added main second container

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     </header>
 
-                <!--main-->
+                <!--main first container-->
     <main class="maine-box">
-        <div class="maine-container">
-            <div class="maine-right-bar">
+        <div class="maine-first-container">
+            <div class="maine-first-right-bar">
                 <h2>Not only people need a house</h2>
                 <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. 
                     He or she will love you more than anybody else in the world, you will see!</p>
@@ -52,15 +52,32 @@
                     </form>
             </div>
 
-                <div class="maine-left-bar">
+                <div class="maine-first-left-bar">
                     <img src="" alt="puppy">
 
                 </div>
-
-
-            
-
         </div>
+                <!--main second container-->
+            <div class="main-second-container">
+                <div class="maine-second-right-bar">
+                    <img src="" alt="puppy">
+                </div>
+
+                <div class="maine-second-left-bar">
+                   <h3>About the shelter “Cozy House”</h3>
+                   <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
+                        The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
+                    </p>
+                    <p>
+                        We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. 
+                        We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff.
+                        Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
+
+                    </p>
+
+                </div>
+
+            </div>
 
 
     </main>
