--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     </header>
 
-                <!--main first container-->
+                <!--start-srceen-container-->
     <main class="maine-box">
-        <div class="maine-first-container">
-            <div class="maine-first-right-bar">
+        <div class="start-srceen-container">
+            <div class="start-right-bar">
                 <h2>Not only people need a house</h2>
                 <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. 
                     He or she will love you more than anybody else in the world, you will see!</p>
@@ -52,18 +52,18 @@
                     </form>
             </div>
 
-                <div class="maine-first-left-bar">
+                <div class="start-left-bar">
                     <img src="" alt="puppy">
 
                 </div>
         </div>
-                <!--main second container-->
-            <div class="main-second-container">
-                <div class="maine-second-right-bar">
+                <!--about-containerr-->
+            <div class="about-container">
+                <div class="about-right-bar">
                     <img src="" alt="puppy">
                 </div>
 
-                <div class="maine-second-left-bar">
+                <div class="abot-left-bar">
                    <h3>About the shelter “Cozy House”</h3>
                    <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
                         The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
