--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
     </header>
 
-                <!--start-srceen-container-->
+                
     <main class="maine-box">
+                <!--start-srceen-container-->
+
         <div class="start-srceen-container">
             <div class="start-right-bar">
                 <h2>Not only people need a house</h2>
@@ -60,7 +62,7 @@
                 <!--about-containerr-->
             <div class="about-container">
                 <div class="about-right-bar">
-                    <img src="" alt="puppy">
+                    <img src="" alt="about cats and dogs">
                 </div>
 
                 <div class="abot-left-bar">
@@ -78,6 +80,52 @@
                 </div>
 
             </div>
+
+                    <!--pets-containerr-->
+                    <div class="pets-container">
+                       <div class="pets-text">
+                        <h3>
+                            Our friends who 
+                            <br>
+                            are looking for a house
+                        </h3>
+                       </div>
+
+                        <!--Slider-->
+                        <div class="slider">
+                            <div class="arrow-item">
+                                <img src="" class="arrow" alt="left-arrow">
+                            </div>
+
+                            <!--Cards-->
+
+                            <div class="card-item">
+                                <img src="" alt="pets-katrine">
+                                <h3>Katrine</h3>
+                                <button type="button">Learn more</button>
+                            </div>
+
+                            <div class="card-item">
+                                <img src="" alt="pets-jennifer">
+                                <h3>Katrine</h3>
+                                <button type="button">Learn more</button>
+                            </div>
+
+                            <div class="card-item">
+                                <img src="" alt="pets-woody">
+                                <h3>Katrine</h3>
+                                <button type="button">Learn more</button>
+                            </div>
+
+                            <div class="arrow-item">
+                                <img src="" class="arrow" alt="right-arrow">
+                            </div>
+                        </div>
+                            <button class="rest-pets">
+                                <a href="#">Get to know the rest</a>
+                            </button>
+                    </div>
+                    
 
 
     </main>
