add: added help box

--- a/index.html
+++ b/index.html
@@ -131,6 +131,58 @@
                             </button>
                     </div>
                 </maine>
+                    <!--Help container-->
+                  <main class="help-box">
+                    <div class="help-container">
+                       <h3>How you can help our shelter</h3>
+                            <!--Help item card-->
+
+                            <div class="help-colum">
+                                <div>
+                                    <img src="" alt="pet-food">
+                                    <p>Pet food</p>
+                                </div>
+                                
+                                <div>
+                                    <img src="" alt="transportation">
+                                    <p>Transportation</p>
+                                </div>
+
+                                <div>
+                                    <img src="" alt="toys">
+                                    <p>Toys</p>
+                                </div>
+
+                                <div>
+                                    <img src="" alt="bowls-and-cups">
+                                    <p>Bowls and cups</p>
+                                </div>
+                                <div>
+                                    <img src="" alt="shampoos">
+                                    <p>Shampoos</p>
+                                </div>
+                                <div>
+                                    <img src="" alt="vitamins">
+                                    <p>Vitamins</p>
+                                </div>
+                                <div>
+                                    <img src="" alt="medicines">
+                                    <p>Medicines</p>
+                                </div>
+                                <div>
+                                    <img src="" alt="collars-leashes">
+                                    <p>Collars / leashes</p>
+                                </div>
+                                <div>
+                                    <img src="" alt="sleeping-area">
+                                    <p>Sleeping areas</p>
+                                </div>
+                            </div>
+
+
+                    </div>
+
+                  </main>
 
 
     
