--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             </div>
         </section>
                             <!--pets-containerr-->
-        <section class="pets">
+        <section class="pets-friends">
                     <div class="pets-container">
                        <div class="pets-text">
-                        <h3>
+                        <h3 class="pets-griend-h3">
                             Our friends who 
                             <br>
                             are looking for a house
@@ -102,36 +102,36 @@
                         <!--Slider-->
                         <div class="slider">
                             <div class="arrow-item">
-                                <img src="" class="arrow" alt="left-arrow">
+                                <img src="img/ArrowLeft.png" class="arrow-left" alt="left-arrow">
                             </div>
 
                             <!--Cards-->
 
                             <div class="card-item">
-                                <img src="" alt="pets-katrine">
-                                <h3>Katrine</h3>
-                                <button type="button">Learn more</button>
+                                <img src="img/pets-katrine.png" alt="pets-katrine">
+                                <h3 class="kate3">Katrine</h3>
+                                <button class="pets-button" type="button">Learn more</button>
                             </div>
 
                             <div class="card-item">
-                                <img src="" alt="pets-jennifer">
-                                <h3>Katrine</h3>
-                                <button type="button">Learn more</button>
+                                <img src="img/pets-jennifer.png" alt="pets-jennifer">
+                                <h3 class="jane3">Jennifer</h3>
+                                <button class="pets-button" type="button">Learn more</button>
                             </div>
 
                             <div class="card-item">
-                                <img src="" alt="pets-woody">
-                                <h3>Katrine</h3>
-                                <button type="button">Learn more</button>
+                                <img src="img/pets-woody.png" alt="pets-woody">
+                                <h3 class="Wood3">Woody</h3>
+                                <button class="pets-button" type="button">Learn more</button>
                             </div>
 
                             <div class="arrow-item">
-                                <img src="" class="arrow" alt="right-arrow">
+                                <img src="img/ArrowRight.png" class="arrow-right" alt="right-arrow">
                             </div>
                         </div>
-                            <button class="rest-pets">
-                                <a href="#">Get to know the rest</a>
-                            </button>
+                            
+                               <span> <a href="#" class="rest-pets" >Get to know the rest</a> </span> 
+                           
                     </div>
                 </section>
                     <!--Help container-->
@@ -188,14 +188,14 @@
                   </section>
 
                     <!--Donation-->
-                <section class="Donation-box">
+                <section class="donation-box">
                     <div class="donat-container">
                         <div class="donat-left-bar">
                             <img src="" alt="dog-img">
                         </div>
 
                         <div class="donat-right-bar">
-                            <h3>You can also make a donation</h3>
+                            <h3 class="dotat-h3">You can also make a donation</h3>
                             <p>
                                 Name of the bank / Type of bank account
                              </p>
