--- a/index.html
+++ b/index.html
@@ -137,47 +137,47 @@
                     <!--Help container-->
                   <section class="help-box">
                     <div class="help-container">
-                       <h3>How you can help our shelter</h3>
+                       <h3 class="help-h3">How you can help our shelter</h3>
                             <!--Help item card-->
 
                             <div class="help-colum">
                                 <div>
-                                    <img src="" alt="pet-food">
+                                    <img src="img/icon-pet-food.png" alt="pet-food">
                                     <p>Pet food</p>
                                 </div>
                                 
                                 <div>
-                                    <img src="" alt="transportation">
+                                    <img src="img/icon-transportation.png" alt="transportation">
                                     <p>Transportation</p>
                                 </div>
 
                                 <div>
-                                    <img src="" alt="toys">
+                                    <img src="img/icon-toys.png" alt="toys">
                                     <p>Toys</p>
                                 </div>
 
                                 <div>
-                                    <img src="" alt="bowls-and-cups">
+                                    <img src="img/icon-bowls-and-cups.png" alt="bowls-and-cups">
                                     <p>Bowls and cups</p>
                                 </div>
                                 <div>
-                                    <img src="" alt="shampoos">
+                                    <img src="img/icon-shampoos.png" alt="shampoos">
                                     <p>Shampoos</p>
                                 </div>
                                 <div>
-                                    <img src="" alt="vitamins">
+                                    <img src="img/icon-vitamins.png" alt="vitamins">
                                     <p>Vitamins</p>
                                 </div>
                                 <div>
-                                    <img src="" alt="medicines">
+                                    <img src="img/icon-medicines.png" alt="medicines">
                                     <p>Medicines</p>
                                 </div>
                                 <div>
-                                    <img src="" alt="collars-leashes">
+                                    <img src="img/icon-collars-leashes.png" alt="collars-leashes">
                                     <p>Collars / leashes</p>
                                 </div>
                                 <div>
-                                    <img src="" alt="sleeping-area">
+                                    <img src="img/icon-sleeping-area.png" alt="sleeping-area">
                                     <p>Sleeping areas</p>
                                 </div>
                             </div>
