--- a/index.html
+++ b/index.html
@@ -143,42 +143,42 @@
                             <div class="help-colum">
                                 <div>
                                     <img src="img/icon-pet-food.png" alt="pet-food">
-                                    <p>Pet food</p>
+                                    <p class="hepl-p">Pet food</p>
                                 </div>
                                 
                                 <div>
                                     <img src="img/icon-transportation.png" alt="transportation">
-                                    <p>Transportation</p>
+                                    <p class="hepl-p">Transportation</p>
                                 </div>
 
                                 <div>
                                     <img src="img/icon-toys.png" alt="toys">
-                                    <p>Toys</p>
+                                    <p class="hepl-p">Toys</p>
                                 </div>
 
                                 <div>
                                     <img src="img/icon-bowls-and-cups.png" alt="bowls-and-cups">
-                                    <p>Bowls and cups</p>
+                                    <p class="hepl-p">Bowls and cups</p>
                                 </div>
                                 <div>
                                     <img src="img/icon-shampoos.png" alt="shampoos">
-                                    <p>Shampoos</p>
+                                    <p class="hepl-p">Shampoos</p>
                                 </div>
                                 <div>
                                     <img src="img/icon-vitamins.png" alt="vitamins">
-                                    <p>Vitamins</p>
+                                    <p class="hepl-p">Vitamins</p>
                                 </div>
                                 <div>
                                     <img src="img/icon-medicines.png" alt="medicines">
-                                    <p>Medicines</p>
+                                    <p class="hepl-p">Medicines</p>
                                 </div>
                                 <div>
                                     <img src="img/icon-collars-leashes.png" alt="collars-leashes">
-                                    <p>Collars / leashes</p>
+                                    <p class="hepl-p">Collars / leashes</p>
                                 </div>
                                 <div>
                                     <img src="img/icon-sleeping-area.png" alt="sleeping-area">
-                                    <p>Sleeping areas</p>
+                                    <p class="hepl-p">Sleeping areas</p>
                                 </div>
                             </div>
 
@@ -191,18 +191,18 @@
                 <section class="donation-box">
                     <div class="donat-container">
                         <div class="donat-left-bar">
-                            <img src="" alt="dog-img">
+                            <img src="img/donation-dog.png" class="dog-donat-img" alt="dog-img">
                         </div>
 
                         <div class="donat-right-bar">
                             <h3 class="dotat-h3">You can also make a donation</h3>
-                            <p>
+                            <p class="donat-text">
                                 Name of the bank / Type of bank account
                              </p>
-                             <div>
-                                <img src="" alt="bank-card">
-                                <a href="#">
-                                    <p>8380 2880 8028 8791 7435</p>
+                             <div class="credit-bank">
+                                <img src="img/credit-card.png" class="credit" alt="bank-card">
+                                <a href="#" class="credit-link">
+                                    <p class="nomber-card">8380 2880 8028 8791 7435</p>
                                 </a>
                              </div>
                          </div>
