fix: fix styles

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             <a href="#" class="nav-link">Our pets</a>
                         </il>
                         <il class="nav-item">
-                            <a href="#" class="nav-link">Help the shelter</a>
+                            <a href="#helpPets" class="nav-link">Help the shelter</a>
                         </il>
                         <il class="nav-item">
-                            <a href="#" class="nav-link">Contacts</a>
+                            <a href="#contact" class="nav-link">Contacts</a>
                         </il>
 
                     </ul>
@@ -89,7 +89,7 @@
             </div>
         </section>
                             <!--pets-containerr-->
-        <section class="pets-friends">
+        <section class="pets-friends" id="shalter-hepl" >
                     <div class="pets-container">
                        <div class="pets-text">
                         <h3 class="pets-griend-h3">
@@ -135,7 +135,7 @@
                     </div>
                 </section>
                     <!--Help container-->
-                  <section class="help-box">
+                  <section class="help-box" id="helpPets">
                     <div class="help-container">
                        <h3 class="help-h3">How you can help our shelter</h3>
                             <!--Help item card-->
@@ -211,7 +211,7 @@
 </main> 
                                     <!--footer-->
 
-    <footer class="fooret-box">
+    <footer class="fooret-box" id="contact">
         <div class="footer-container">
             <div class="mail-fone">
                 <h2 class="contacts-h2">For questions and suggestions</h2>
