add: added bugreg menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <!--header-->
-
+    <div class="bigMac-menu">
+        <div class="wrapper-bigMac">
+            <ul>
+                <li>
+                <a href="./index.html" class="bigMac-link active-item">About the shelter</a>
+                </li>
+                <li>
+                    <a href="#" class="bigMac-link">Our pets</a>
+                </li>
+                <li>
+                    <a href="#helpPets" class="bigMac-link">Help the shelter</a>
+                </li>
+                <li>
+                    <a href="#contact" class="bigMac-link">Contacts</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <header class="header-box">
         <div class="nav-container">
                 <div class="logo">
