add: added adaprive stile and corect html

--- a/index.html
+++ b/index.html
@@ -25,16 +25,22 @@
                     <a href="#contact" class="bigMac-link">Contacts</a>
                 </li>
             </ul>
+            <button class="bigMac-logo">
+                <span class="bigMac-item"></span>
+                <span class="bigMac-item"></span>
+                <span class="bigMac-item"></span>
+            </button>
         </div>
     </div>
     <header class="header-box">
         <div class="nav-container">
+            <nav class="navbar">
                 <div class="logo">
                     <a href="#"><h2 class="header-logo-h2">Cozy House</h2></a>
                     <p class="header-logo-p">Shelter for pets in Boston</p>
                 </div>
                
-                <nav class="navbar">
+                
                     <ul class="navbar-list">
                         <il class="nav-item active">
                             About the shelter
