feat: added img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             About the shelter
                         </li>
                         <li class="nav-item" >
-                            <a href="#" class="nav-link">Our pets</a>
+                            <a href="pets/index.html" class="nav-link">Our pets</a>
                         </li>
                         <li class="nav-item">
                             <a href="#helpPets" class="nav-link">Help the shelter</a>
