--- a/pets/index.html
+++ b/pets/index.html
@@ -57,40 +57,41 @@
                 <!--kit-pets-->
                 <div class="kit-pets">
                     <div class="pets-item">
-                        <img src="" alt="Katrine">
+                        <img src="../img/pets-katrine.png" alt="Katrine">
                         <h3 class="name">Katrine</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
                     <div class="pets-item">
-                        <img src="" alt="Jennifer">
+                        <img src="../img/pets-jennifer.png" alt="Jennifer">
                         <h3 class="name">Jennifer</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
                     <div class="pets-item">
-                        <img src="" alt="Woody">
+                        <img src="../img/pets-woody.png" alt="Woody">
                         <h3 class="name">Woody</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
                     <div class="pets-item">
-                        <img src="" alt="Sophia">
+                        <img src="../img/pets-sophia.png" alt="Sophia">
                         <h3 class="name">Sophia</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item"><img src="" alt="Timmy">
+                    <div class="pets-item">
+                        <img src="../img/pets-timmy.png" alt="Timmy">
                         <h3 class="name">Timmy</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button></div>
                     <div class="pets-item">
-                        <img src="" alt="Charly">
+                        <img src="../img/pets-charly.png" alt="Charly">
                         <h3 class="name">Charly</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
                     <div class="pets-item">
-                        <img src="" alt="Scarlett">
+                        <img src="../img/pets-scarlet.png" alt="Scarlett">
                         <h3 class="name">Scarlett</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
                     <div class="pets-item">
-                        <img src="" alt="Freddie">
+                        <img src="../img/pets-freddie.png" alt="Freddie">
                         <h3 class="name">Freddie</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
