feat: added icon for navigation button

--- a/pets/index.html
+++ b/pets/index.html
@@ -99,21 +99,21 @@
 
                 <!--navigation-->
                 <button class="first nav-btn btn" disabled="">
-                    <img src="" alt="first">
+                    <img src="../img/last.svg" alt="first">
                 </button>
 
                 <button class="back nav-btn btn" disabled="">
-                    <img src="" alt="back">
+                    <img src="../img/next.svg" alt="back">
                 </button>
 
                 <button class="active-nav nav-btn btn">1</button>
 
                 <button class="next nav-btn btn">
-                    <img src="" alt="next">
+                    <img src="../img/next.svg" alt="next">
                 </button>
 
                 <button class="last nav-btn btn">
-                    <img src="" alt="last">
+                    <img src="../img/last.svg" alt="last">
                 </button>
 
             </div>
