freat: added style fro, menu

--- a/pets/index.html
+++ b/pets/index.html
@@ -12,8 +12,8 @@
         <div class="header">
             <div class="bigMac-container">
                 <a href="http://" class="header-logo">
-                    <h2 class="header-logo">Cozy House</h2>
-                    <p class="header-text">Shelter for pets in Boston</p>
+                    <h2 class="header-logo-h2">Cozy House</h2>
+                    <p class="header-text-p">Shelter for pets in Boston</p>
                 </a>
                
                     <div class="header-menu">
@@ -23,16 +23,16 @@
                             <nav class="menu_body">
                                <ul class="menu_list">
                                 <li>
-                                    <a href="../index.html"> About the shelter</a>
+                                    <a href="../index.html" class="nav-link"> About the shelter</a>
                                  </li>
                                 <li>
-                                    <a href="../pets/index.html"> Our pets</a>
+                                    <a href="../pets/index.html" class="nav-link active-link"> Our pets</a>
                                 </li>
                                 <li>
-                                    <a href="../index.html#helpPets">Help the shelter</a>
+                                    <a href="../index.html#helpPets" class="nav-link">Help the shelter</a>
                                 </li>
                                 <li>
-                                    <a href="../index.html#contact"> Contacts</a>
+                                    <a href="../index.html#contact" class="nav-link"> Contacts</a>
                                 </li>
 
                                </ul>                                
@@ -49,7 +49,7 @@
     <main class="our-pets">
         <div class="container">
             <div class="pets-content">
-                <h2> Our friends who 
+                <h2 class="text-h2"> Our friends who 
                     <br>
                     are looking for a house
                 </h2>
