--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper-bigMac">
             <ul>
                 <li>
-                <a href="./index.html" class="bigMac-link active-item">About the shelter</a>
+                <a href="index.html" class="bigMac-link active-item">About the shelter</a>
                 </li>
                 <li>
                     <a href="#" class="bigMac-link">Our pets</a>
