fix: fixed style in pets kit section

--- a/pets/index.html
+++ b/pets/index.html
@@ -56,42 +56,42 @@
 
                 <!--kit-pets-->
                 <div class="kit-pets">
-                    <div class="pets-item">
-                        <img src="../img/pets-katrine.png" alt="Katrine">
+                    <div class="pets-card">
+                        <img src="../img/pets-katrine.png" class="img-pet" alt="Katrine">
                         <h3 class="name">Katrine</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item">
-                        <img src="../img/pets-jennifer.png" alt="Jennifer">
+                    <div class="pets-card">
+                        <img src="../img/pets-jennifer.png" class="img-pet" alt="Jennifer">
                         <h3 class="name">Jennifer</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item">
-                        <img src="../img/pets-woody.png" alt="Woody">
+                    <div class="pets-card">
+                        <img src="../img/pets-woody.png" class="img-pet" alt="Woody">
                         <h3 class="name">Woody</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item">
-                        <img src="../img/pets-sophia.png" alt="Sophia">
+                    <div class="pets-card">
+                        <img src="../img/pets-sophia.png" class="img-pet" alt="Sophia">
                         <h3 class="name">Sophia</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item">
-                        <img src="../img/pets-timmy.png" alt="Timmy">
+                    <div class="pets-card">
+                        <img src="../img/pets-timmy.png" class="img-pet" alt="Timmy">
                         <h3 class="name">Timmy</h3>
-                        <button class="more-pets btn" ondblclick="showModal()">Learn more</button></div>
-                    <div class="pets-item">
-                        <img src="../img/pets-charly.png" alt="Charly">
+                        <button class="more-pets btn" class="img-pet" ondblclick="showModal()">Learn more</button></div>
+                    <div class="pets-card">
+                        <img src="../img/pets-charly.png" class="img-pet" alt="Charly">
                         <h3 class="name">Charly</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item">
-                        <img src="../img/pets-scarlet.png" alt="Scarlett">
+                    <div class="pets-card">
+                        <img src="../img/pets-scarlet.png" class="img-pet" alt="Scarlett">
                         <h3 class="name">Scarlett</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
-                    <div class="pets-item">
-                        <img src="../img/pets-freddie.png" alt="Freddie">
+                    <div class="pets-card">
+                        <img src="../img/pets-freddie.png" class="img-pet" alt="Freddie">
                         <h3 class="name">Freddie</h3>
                         <button class="more-pets btn" ondblclick="showModal()">Learn more</button>
                     </div>
