fix: fixed style in home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Shelter NovemberMan90</title>
 </head>
 <body>
-    <!--header-->
+    <!--header
     <div class="bigMac-menu">
         <div class="wrapper-bigMac">
             <ul>
@@ -31,9 +31,46 @@
                 <span class="bigMac-item"></span>
             </button>
         </div>
-    </div>
+    </div>-->
+     
     <header class="header-box">
-        <div class="nav-container">
+        <div class="header">
+            <div class="bigMac-container">
+                <a href="index.html" class="header-logo">
+                    <h2 class="header-logo-h2">Cozy House</h2>
+                    <p class="header-text-p">Shelter for pets in Boston</p>
+                </a>
+               
+                    <div class="header-menu">
+                        <div class="menu_icon">
+                            <span></span>
+                        </div>
+                            <nav class="menu_body">
+                               <ul class="menu_list">
+                                <li>
+                                    <a href="index.html" class="nav-link active-link"> About the shelter</a>
+                                 </li>
+                                <li>
+                                    <a href="pets/index.html" class="nav-link"> Our pets</a>
+                                </li>
+                                <li>
+                                    <a href="index.html#helpPets" class="nav-link">Help the shelter</a>
+                                </li>
+                                <li>
+                                    <a href="index.html#contact" class="nav-link"> Contacts</a>
+                                </li>
+
+                               </ul>                                
+                            </nav>
+                    </div>
+            </div>
+
+        </div>
+
+
+
+
+       <!-- <div class="nav-container">
             <nav class="navbar">
                 <div class="logo">
                     <a href="#"><h2 class="header-logo-h2">Cozy House</h2></a>
@@ -59,7 +96,7 @@
 
                 </nav>
 
-        </div>
+        </div>-->
 
     </header>
 
@@ -231,7 +268,8 @@
                          </div>
                     </div>
                 </section>
-</main> 
+</main>
+
                                     <!--footer-->
 
     <footer class="fooret-box" id="contact">
