--- a/pets/index.html
+++ b/pets/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <section class="start">
+
+    </section>
     <header class="wrapper">
         <div class="header">
             <div class="bigMac-container">
