fix: fixed html section help pets

--- a/index.html
+++ b/index.html
@@ -201,42 +201,42 @@
                             <!--Help item card-->
 
                             <div class="help-colum">
-                                <div>
+                                <div class="help-cadrd">
                                     <img src="img/icon-pet-food.png" alt="pet-food">
                                     <p class="hepl-p">Pet food</p>
                                 </div>
                                 
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-transportation.png" alt="transportation">
                                     <p class="hepl-p">Transportation</p>
                                 </div>
 
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-toys.png" alt="toys">
                                     <p class="hepl-p">Toys</p>
                                 </div>
 
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-bowls-and-cups.png" alt="bowls-and-cups">
                                     <p class="hepl-p">Bowls and cups</p>
                                 </div>
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-shampoos.png" alt="shampoos">
                                     <p class="hepl-p">Shampoos</p>
                                 </div>
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-vitamins.png" alt="vitamins">
                                     <p class="hepl-p">Vitamins</p>
                                 </div>
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-medicines.png" alt="medicines">
                                     <p class="hepl-p">Medicines</p>
                                 </div>
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-collars-leashes.png" alt="collars-leashes">
                                     <p class="hepl-p">Collars / leashes</p>
                                 </div>
-                                <div>
+                                <div class="help-card">
                                     <img src="img/icon-sleeping-area.png" alt="sleeping-area">
                                     <p class="hepl-p">Sleeping areas</p>
                                 </div>
