fix: fixed style in slider

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
                                 <button class="pets-button" type="button">Learn more</button>
                             </div>
 
-                            <div class="card-item">
+                            <div class="card-item jennifer">
                                 <img src="img/pets-jennifer.png" alt="pets-jennifer">
                                 <h3 class="jane3">Jennifer</h3>
                                 <button class="pets-button" type="button">Learn more</button>
                             </div>
 
-                            <div class="card-item">
+                            <div class="card-item woody">
                                 <img src="img/pets-woody.png" alt="pets-woody">
                                 <h3 class="Wood3">Woody</h3>
                                 <button class="pets-button" type="button">Learn more</button>
