fix: fixed adress

--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
                     <h2 class="location-h2"> We are waiting for your visit</h2>
                     <ul class="location-list">
                         <li>
-                            <a href="#" class="adress-boston" > 
+                            <a href="https://goo.gl/maps/SCbH97BwH9K9FstZA" class="adress-boston" target="_blank"> 
                                 <img src="img/icon-marker.png"  class="img-local" alt="icon-marker">
                                 1 Central Street, Boston (entrance from the store)
                              </a>
                         </li>
                         <li>
-                            <a href="#" class="adress-london"> 
+                            <a href="https://goo.gl/maps/MvmN6GDcLCJLqyYs5" class="adress-london" target="_blank"> 
                                 <img src="img/icon-marker.png" class="img-local" alt="icon-marker">
                             18 South Park, London
                              </a>
