fix: fixed link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                     <form class="not-only-form">
                         <button class="not-only-b">
-                             <a href="#" class="not-only-link">Make a friend</a>
+                             <a href="#shalter-hepl" class="not-only-link">Make a friend</a>
                         </button>
                     </form>
             </div>
