fix: fixed style

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                     <form class="not-only-form">
                         <button class="not-only-b">
-                             <a href="#shalter-hepl" class="not-only-link">Make a friend</a>
+                             <a href="#slider" class="not-only-link">Make a friend</a>
                         </button>
                     </form>
             </div>
@@ -150,7 +150,7 @@
         </section>
                             <!--pets-containerr-->
         <section class="pets-friends" id="shalter-hepl" >
-                    <div class="pets-container">
+                    <div class="pets-container" id="slider">
                        <div class="pets-text">
                         <h3 class="pets-griend-h3">
                             Our friends who 
