feat: create new function (test) from slider

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                         <!--Slider-->
                         <div class="slider">
-                            <div class="arrow-item">
+                            <div class="arrow-item" id="btn-left">
                                 <img src="img/ArrowLeft.png" class="arrow-left" alt="left-arrow">
                             </div>
 
@@ -185,7 +185,7 @@
                                 <button class="pets-button" type="button">Learn more</button>
                             </div>
 
-                            <div class="arrow-item">
+                            <div class="arrow-item" id="btn-right">
                                 <img src="img/ArrowRight.png" class="arrow-right" alt="right-arrow">
                             </div>
                         </div>
@@ -321,4 +321,5 @@
 
 <script src="js/pets.js"></script>
 </body>
+
 </html>
