fix: added class img

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
 
                 <div class="start-left-bar">
-                    <img src="img/start-screen-puppy.png" alt="puppy">
+                    <img src="img/start-screen-puppy.png" alt="puppy" class="start-left-bar-img">
 
                 </div>
         </div>
@@ -277,7 +277,7 @@
                 </div>
 
                 <div class="fotter-puppe">
-                    <img src="img/footer-puppy.png" alt="puppe">
+                    <img class="footer-puppe-img" src="img/footer-puppy.png" alt="puppe">
                 </div>
 
             
