refactor: slider block
Newly created slider block

--- a/index.html
+++ b/index.html
@@ -128,33 +128,28 @@
 
                         <!--Slider-->
                         <div class="slider">
-                            <div class="arrow-item" id="btn-left">
-                                <img src="img/ArrowLeft.png" class="arrow-left" alt="left-arrow">
-                            </div>
+                            <div class="wrapper">
 
+                                <div class="btns-slider">
+                                    <div class="arrow-item prev" id="btn-left"></div>
+                                    <div class="arrow-item next" id="btn-right"></div>
+                                </div>
+                            
                             <!--Cards-->
+                                <div class="carousel" id="carousel">
+                                    <div class="card-item">
+                                        <div class="pets__wrapper"></div>
+                                     </div>
 
-                            <div class="card-item">
-                                <img src="img/pets-katrine.png" alt="pets-katrine">
-                                <h3 class="kate3">Katrine</h3>
-                                <button class="pets-button" type="button">Learn more</button>
-                            </div>
+                                    <div class="card-item jennifer">
+                                         <div class="pets__wrapper"></div>
+                                    </div>
 
-                            <div class="card-item jennifer">
-                                <img src="img/pets-jennifer.png" alt="pets-jennifer">
-                                <h3 class="jane3">Jennifer</h3>
-                                <button class="pets-button" type="button">Learn more</button>
-                            </div>
-
-                            <div class="card-item woody">
-                                <img src="img/pets-woody.png" alt="pets-woody">
-                                <h3 class="Wood3">Woody</h3>
-                                <button class="pets-button" type="button">Learn more</button>
-                            </div>
-
-                            <div class="arrow-item" id="btn-right">
-                                <img src="img/ArrowRight.png" class="arrow-right" alt="right-arrow">
-                            </div>
+                                    <div class="card-item woody">
+                                        <div class="pets__wrapper"></div>
+                                    </div>
+                                </div>
+                         </div>
                         </div>
                             
                                <span> <a href="#" class="rest-pets" >Get to know the rest</a> </span> 
@@ -287,6 +282,8 @@
   
 
 <script src="js/pets.js"></script>
+<script src="js/petsDataBase.js"></script>
+<script src="js/silider.js"></script>
 </body>
 
 </html>
