--- a/pets/index.html
+++ b/pets/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../css/style_pets.css">
+    <link rel="stylesheet" href="../css/popup.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -172,6 +173,9 @@
 
 
     </footer>
+    <script src="../js/petsDataBase.js"></script>
     <script src="../js/pets.js"></script>
+    
+    <script src="../js/silider.js"></script>
 </body>
 </html>
