--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                          </div>
                         </div>
                             <div class="rest-pets-btn"> 
-                                <a href="#" class="rest-pets" >Get to know the rest</a> 
+                                <a href="pets/index.html" class="rest-pets" >Get to know the rest</a> 
                             </div> 
                            
                     </div>
