fix: fixed link at contact

--- a/pets/index.html
+++ b/pets/index.html
@@ -36,7 +36,7 @@
                                     <a href="../index.html#helpPets" class="nav-link">Help the shelter</a>
                                 </li>
                                 <li>
-                                    <a href="../index.html#contact" class="nav-link"> Contacts</a>
+                                    <a href="index.html#contact" class="nav-link"> Contacts</a>
                                 </li>
 
                                </ul>                                
