fix: fixed script element

--- a/pets/index.html
+++ b/pets/index.html
@@ -174,8 +174,8 @@
 
     </footer>
     <script src="../js/petsDataBase.js"></script>
-    <script src="../js/pets.js"></script>
+    <script src="../js/pets2.js"></script>
     
-    <script src="../js/silider.js"></script>
+  
 </body>
 </html>
